Ajout audit et Virement + Refacto code